.git-store/_quarantine/pkg/console/testdata/TestGolden_ErrorFormatting/error_with_context.golden
test.md:3:5: error: missing colon in YAML mapping
2 | tools:
3 |   github
        ^^^^
4 |     allowed: [list_issues]
